@@ -325,6 +325,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 4279) Small correction to LanguageDa.php
 * (bug 349) Fix for some numeric differences not being highlighted
   patch by Andrius Ramanauskas
+* Removed FulltextStoplist.php, no longer used (was for MySQL 3.x workaround)
 
 
 === Caveats ===
